# vtui

./: .gitignore  Cargo.toml  LICENSE.md  README.md  flake.nix
.github/workflows/: format.yaml  publish.yaml
crates/vtui-core/: Cargo.toml
crates/vtui-core/src/: arena.rs  canvas.rs  channels.rs  component.rs  context.rs  driver.rs  error.rs  events.rs  input.rs  layout.rs  lib.rs  listeners.rs  runtime.rs  source.rs  state.rs  transport.rs
crates/vtui-macros/: Cargo.toml
crates/vtui-macros/src/: component.rs  lib.rs  vtui.rs
examples/: canvas_demo.rs  child_test.rs  simple_app.rs
macros/: Cargo.toml  README.md
macros/src/: component.rs  lib.rs  vtui.rs
src/: arena.rs  canvas.rs  component.rs  context.rs  errors.rs  events.rs  handler.rs  input.rs  launch.rs  layout.rs  lib.rs  listeners.rs  runtime.rs  state.rs  transport.rs
src/drivers/: crossterm.rs  mod.rs
