[workspace]
resolver = "3"
members = ["crates/vtui-core","crates/vtui-macros"]

[package]
name = "vtui"
version = "0.1.0"
edition = "2024"
description = "A simple terminal UI framework"
repository = "https://github.com/joshprk/vtui"
license = "MIT"
keywords = ["terminal", "tui"]
categories = ["command-line-interface"]

[features]
default = ["crossterm"]
crossterm = ["dep:crossterm", "ratatui/crossterm"]

[dependencies]
crossterm = { version = "0.29.0", optional = true }
ratatui = { version = "0.30.0", default-features = false }
vtui-core = { version = "0.1.0", path = "crates/vtui-core" }
vtui-macros = { version = "0.1.0", path = "crates/vtui-macros" }
