[package]
name = "vtui"
version = "0.2.1"
edition = "2024"
description = "A simple terminal UI framework"
repository = "https://github.com/joshprk/vtui"
license = "MIT"
keywords = ["terminal", "tui"]
categories = ["command-line-interface"]

[features]
default = ["crossterm"]
crossterm = ["dep:crossterm", "ratatui/crossterm"]

[dependencies]
crossterm = { version = "0.29.0", optional = true }
flume = { version = "0.12.0", default-features = false }
generational-box = "0.7.3"
ratatui = { version = "0.30.0", default-features = false }
slotmap = "1.1.1"
thiserror = "2.0.18"
unicode-segmentation = "1.12.0"
unicode-width = "0.2.2"
