[workspace]
members = ["macros"]
resolver = "3"

[package]
name = "vtui"
version = "0.4.2"
edition = "2024"
description = "A simple terminal UI framework"
repository = "https://github.com/joshprk/vtui"
license = "MIT"
keywords = ["terminal", "tui"]
categories = ["command-line-interface"]

[features]
default = ["crossterm", "smol"]
crossterm = ["dep:crossterm", "ratatui/crossterm"]
smol = ["dep:smol"]

[dependencies]
async-channel = "2.5.0"
crossterm = { version = "0.29.0", optional = true }
generational-box = "0.7.3"
ratatui = { version = "0.30.0", default-features = false }
slotmap = "1.1.1"
smol = { version = "2.0.2", default-features = false, optional = true }
thiserror = "2.0.18"
unicode-segmentation = "1.12.0"
unicode-width = "0.2.2"
vtui-macros = { version = "0.4.2", path = "macros" }
