[package]
name = "vtui-core"
version = "0.2.1"
edition = "2024"
description = "A simple terminal UI framework"
license = "MIT"

[dependencies]
generational-box = "0.7.2"
ratatui = { version = "0.30.0", default-features = false }
slotmap = "1.1.1"
thiserror = "2.0.17"
unicode-segmentation = "1.12.0"
unicode-width = "0.2.2"
